# STM32_HAL_Tutorial_Linux

./: .gitignore  LICENSE  README.md
1-1_InitSystemClock/: CMakeLists.txt
1-1_InitSystemClock/.scripts/: flash.py  gdb-multiarch.py
1-1_InitSystemClock/Core/Sys/Src/: rcc.c
1-1_InitSystemClock/Core/User/: main.c
1-1_InitSystemClock/cmake/stm32/: CMakeLists.txt
2-1_Key_Ctr_LED_Poll/: CMakeLists.txt
2-1_Key_Ctr_LED_Poll/.scripts/: flash.py
2-1_Key_Ctr_LED_Poll/Core/Hw/Inc/: Key.h
2-1_Key_Ctr_LED_Poll/Core/Hw/Src/: Key.c
2-1_Key_Ctr_LED_Poll/Core/User/: main.c
2-2_Key_Ctr_LED_Int/: CMakeLists.txt
2-2_Key_Ctr_LED_Int/.scripts/: cls-build.py  flash.py
2-2_Key_Ctr_LED_Int/Core/Hw/Src/: Key.c
2-2_Key_Ctr_LED_Int/Core/User/: main.c
2-2_Key_Ctr_LED_Int/cmake/stm32/: CMakeLists.txt
3-1_Uart_RTx_Poll/: CMakeLists.txt
3-1_Uart_RTx_Poll/.scripts/: flash.py
3-1_Uart_RTx_Poll/cmake/stm32/: CMakeLists.txt
3-2_Uart_RTx_IT/: CMakeLists.txt
3-2_Uart_RTx_IT/.scripts/: flash.py
3-2_Uart_RTx_IT/Core/Hw/Inc/: myuart.h  ring_buffer.h  uart.h
3-2_Uart_RTx_IT/Core/Hw/Src/: myuart.c  ring_buffer.c  stm32f1xx_it.c  uart.c
3-2_Uart_RTx_IT/Core/User/: main.c
3-2_Uart_RTx_IT/cmake/stm32/: CMakeLists.txt
3-3_Uart_RTx_DMA/: CMakeLists.txt
3-3_Uart_RTx_DMA/.scripts/: flash.py
3-3_Uart_RTx_DMA/Core/Hw/Inc/: ring_buffer.h  uart.h
3-3_Uart_RTx_DMA/Core/Hw/Src/: stm32f1xx_it.c  uart.c
3-4_Uart_RTx_Printf/: CMakeLists.txt
3-4_Uart_RTx_Printf/.scripts/: flash.py
3-4_Uart_RTx_Printf/Core/Hw/Inc/: uart.h
3-4_Uart_RTx_Printf/Core/Hw/Src/: LED.c  stm32f1xx_it.c  uart.c
3-4_Uart_RTx_Printf/Core/User/: main.c
4-10_Tim_OC_Encoder/: CMakeLists.txt
4-10_Tim_OC_Encoder/.scripts/: flash.py
4-10_Tim_OC_Encoder/Core/Hw/Inc/: tim.h
4-10_Tim_OC_Encoder/Core/Hw/Src/: tim.c
4-10_Tim_OC_Encoder/Core/Sys/Src/: rcc.c
4-10_Tim_OC_Encoder/Core/User/: main.c
4-11_Tim_IC_ETR/: CMakeLists.txt  README.md
4-11_Tim_IC_ETR/.scripts/: flash.py
4-11_Tim_IC_ETR/Core/Hw/Src/: tim.c
4-12_Tim_IC_PWM/: CMakeLists.txt
4-12_Tim_IC_PWM/.scripts/: flash.py
4-12_Tim_IC_PWM/Core/Hw/Inc/: ring_buffer.h  tim.h
4-12_Tim_IC_PWM/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-12_Tim_IC_PWM/Core/User/: main.c
4-1_Tim_Poll/: CMakeLists.txt
4-1_Tim_Poll/.scripts/: flash.py
4-1_Tim_Poll/Core/Hw/Src/: tim.c
4-2_Tim_IT/: CMakeLists.txt
4-2_Tim_IT/.scripts/: flash.py
4-2_Tim_IT/Core/Hw/Inc/: tim.h
4-2_Tim_IT/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-2_Tim_IT/Core/User/: main.c
4-3_Tim_DMA/: CMakeLists.txt
4-3_Tim_DMA/.scripts/: flash.py
4-3_Tim_DMA/Core/Hw/Inc/: tim.h
4-3_Tim_DMA/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-4_Tim_OutMode/: CMakeLists.txt
4-4_Tim_OutMode/.scripts/: flash.py
4-4_Tim_OutMode/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-4_Tim_OutMode/Core/User/: main.c
4-5_Tim_OutMode_IT_DMA/: CMakeLists.txt
4-5_Tim_OutMode_IT_DMA/.scripts/: flash.py
4-5_Tim_OutMode_IT_DMA/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-5_Tim_OutMode_IT_DMA/Core/User/: main.c
4-6_Tim_IC/: CMakeLists.txt
4-6_Tim_IC/.scripts/: flash.py
4-6_Tim_IC/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-6_Tim_IC/Core/User/: main.c
4-6_Tim_IC/cmake/stm32/: CMakeLists.txt
4-7_Tim_OC/: CMakeLists.txt
4-7_Tim_OC/.scripts/: flash.py
4-7_Tim_OC/Core/Hw/Inc/: tim.h  uart.h
4-7_Tim_OC/Core/Hw/Src/: stm32f1xx_it.c  tim.c  uart.c
4-7_Tim_OC/Core/User/: main.c
4-7_Tim_OC/cmake/: gcc-arm-none-eabi.cmake
4-8_Tim_OC_PWM/: CMakeLists.txt
4-8_Tim_OC_PWM/.scripts/: flash.py
4-8_Tim_OC_PWM/Core/Hw/Inc/: tim.h
4-8_Tim_OC_PWM/Core/Hw/Src/: stm32f1xx_it.c  tim.c
4-8_Tim_OC_PWM/Core/User/: main.c
4-9_Tim_OC_single_pulse/: CMakeLists.txt
4-9_Tim_OC_single_pulse/.scripts/: flash.py
4-9_Tim_OC_single_pulse/Core/Hw/Src/: tim.c
4-9_Tim_OC_single_pulse/Core/User/: main.c
5-1_ADC/: CMakeLists.txt
5-1_ADC/.scripts/: flash.py
5-1_ADC/Core/Hw/Inc/: adc.h  tim.h
5-1_ADC/Core/Hw/Src/: Key.c  adc.c  stm32f1xx_it.c  tim.c  uart.c
5-1_ADC/Core/User/: main.c
5-1_ADC/cmake/stm32/: CMakeLists.txt
6-1_I2C/: .gdbinit  CMakeLists.txt
6-1_I2C/.scripts/: flash.py
6-1_I2C/Core/Hw/Inc/: MPU6050.h  i2c.h  i2c_sf.h  uart.h
6-1_I2C/Core/Hw/Src/: i2c.c
6-1_I2C/Core/Sys/Src/: rcc.c
6-1_I2C/Core/User/: main.c
6-1_I2C/cmake/stm32/: CMakeLists.txt
7-1_SPI/: CMakeLists.txt
7-1_SPI/.scripts/: flash.py
7-1_SPI/Core/Hw/Inc/: Key.h  adc.h  spi.h  spi_sf.h  tim.h
7-1_SPI/Core/Hw/Src/: i2c.c  spi.c
7-1_SPI/Core/Sys/Inc/: rcc.h
7-1_SPI/Core/User/: main.c
7-1_SPI/cmake/stm32/: CMakeLists.txt
8-1_RTC/: .clangd  CMakeLists.txt
8-1_RTC/.scripts/: flash.py
8-1_RTC/Core/Hw/Inc/: rtc.h
8-1_RTC/Core/Hw/Src/: i2c_sf.c  rtc.c  spi_sf.c  stm32f1xx_it.c  tim.c
8-1_RTC/Core/User/: main.c
8-1_RTC/cmake/stm32/: CMakeLists.txt
9-1_FreeRTOS/: CMakeLists.txt
9-1_FreeRTOS/Core/User/: main.c
9-1_FreeRTOS/cmake/stm32/: CMakeLists.txt
9-2_FreeRTOS/: CMakeLists.txt  README.md
9-2_FreeRTOS/Core/User/: main.c
9-2_FreeRTOS/cmake/stm32/: CMakeLists.txt
9-3_FreeRTOS_MenageInterupt/: CMakeLists.txt
9-3_FreeRTOS_MenageInterupt/Core/User/: main.c
9-3_FreeRTOS_MenageInterupt/cmake/stm32/: CMakeLists.txt
9-4_FreeRTOS_Semphore/: CMakeLists.txt
9-4_FreeRTOS_Semphore/.scripts/: build.py
9-4_FreeRTOS_Semphore/Core/User/: main.c
9-4_FreeRTOS_Semphore/cmake/stm32/: CMakeLists.txt
9-5_FreeRTOS_QueueSet/: CMakeLists.txt
9-6_FreeRTOS_EventFlagGroup/: CMakeLists.txt
9-7_FreeRTOS_Questnotice/: CMakeLists.txt
9-8_FreeRTOS_Software_Time/: .clangd  CMakeLists.txt
FreeRTOS_template/: .gdbinit.manual  CMakeLists.txt
FreeRTOS_template/Core/User/: main.c
FreeRTOS_template/cmake/stm32/: CMakeLists.txt
stm32_linux_template/: CMakeLists.txt  README.md
stm32_linux_template/.scripts/: gdb-multiarch.py  openocd.py
stm32_linux_template/autolink_windowstolinux_script/: README.md  auto_attach.ps1  run_auto_attach.py
stm32_linux_template/cmake/: gcc-arm-none-eabi.cmake
(+35 files in other folders)
